--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="logo">WebStudio</a>
+        <a href="./index.html" class="logo">Web<span>Studio</span></a>
         <ul>
           <li>
             <a href="/">Studio</a>
@@ -140,10 +140,90 @@
           </li>
         </ul>
       </section>
+
+      <section class="portfolio-content">
+        <h2 class="portfolio-title">Our Portfolio</h2>
+
+        <div class="row-first">
+          <ul>
+            <li class="banking-app">
+              <img
+                class="portfolio-image"
+                src="./images/our-portfolio/Banking-App.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h3 class="banking-app-text">Banking App</h3>
+              <p class="portfolio-text">App</p>
+            </li>
+            <li class="cashless-payment">
+              <img
+                class="portfolio-image"
+                src="./images/our-portfolio/Cashless-Payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-title">Cashless Payment</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+            <li class="meditation-app">
+              <img
+                class="portfolio-image"
+                src="./images/our-portfolio/Meditation-App.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-title">Meditation App</h3>
+              <p class="portfolio-text">App</p>
+            </li>
+          </ul>
+        </div>
+
+        <div class="row-second">
+          <ul>
+            <li class="taxi-service">
+              <img
+                class="portfolio-image"
+                src="./images/our-portfolio/Taxi-Service.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-title">Taxi Service</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+            <li class="screen-illustrations">
+              <img
+                class="portfolio-image"
+                src="./images/our-portfolio/Screen-Illustrations.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-title">Screen Illustrations</h3>
+              <p class="portfolio-text">Design</p>
+            </li>
+            <li class="online-courses">
+              <img
+                class="portfolio-image"
+                src="./images/our-portfolio/Online-Courses.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-title">Online Courses</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <footer>
-      <a href="./index.html" class="logo">WebStudio</a>
+      <a href="./index.html" class="logo">Web<span>Studio</span></a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
