--- a/index.html
+++ b/index.html
@@ -1,233 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto+Condensed&family=Roboto:wght@700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
-    />
-    <title>WEBSTUDIO</title>
-  </head>
 
-  <body>
-    <header>
-      <nav>
-        <a href="./index.html" class="logo">Web<span>Studio</span></a>
-        <ul>
-          <li>
-            <a href="/">Studio</a>
-          </li>
-          <li>
-            <a href="/">Portfolio</a>
-          </li>
-          <li>
-            <a href="/">Contacts</a>
-          </li>
-        </ul>
-      </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WEBSTUDIO</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="./css/style.css" />
+</head>
 
-      <address class="contacts">
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
-    </header>
-
-    <main>
-      <section class="content_section1">
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button" class="button">Order Service</button>
-      </section>
-
-      <section class="content_section2">
-        <h2>Features</h2>
-
-        <ul>
-          <li class="feature1">
-            <h3>Strategy</h3>
-            <p>
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-
-          <li class="feature2">
-            <h3>Punctuality</h3>
-            <p>
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-
-          <li class="feature3">
-            <h3>Diligence</h3>
-            <p>
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-
-          <li class="feature4">
-            <h3>Technologies</h3>
-            <p>
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
-      </section>
-
-      <section class="content_section3">
-        <h2>Our Team</h2>
-
-        <ul>
-          <li class="card_Mark">
-            <img
-              src="./images/Mark.jpg"
-              alt="on the picture Mark Guerrero"
-              width="264"
-              height="260"
-            />
-
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
-          </li>
-
-          <li class="card_Tom">
-            <img
-              src="./images/Tom.jpg"
-              alt="on the picture Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
-          </li>
-
-          <li class="card_Camila">
-            <img
-              src="./images/Camila.jpg"
-              alt="on the picture Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
-          </li>
-
-          <li class="card_Daniel">
-            <img
-              src="./images/Daniel.jpg"
-              alt="on the picture Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
-      </section>
-
-      <section class="portfolio-content">
-        <h2 class="portfolio-title">Our Portfolio</h2>
-
-        <div class="row-first">
-          <ul>
-            <li class="banking-app">
-              <img
-                class="portfolio-image"
-                src="./images/our-portfolio/Banking-App.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
-              <h3 class="banking-app-text">Banking App</h3>
-              <p class="portfolio-text">App</p>
-            </li>
-            <li class="cashless-payment">
-              <img
-                class="portfolio-image"
-                src="./images/our-portfolio/Cashless-Payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-title">Cashless Payment</h3>
-              <p class="portfolio-text">Marketing</p>
-            </li>
-            <li class="meditation-app">
-              <img
-                class="portfolio-image"
-                src="./images/our-portfolio/Meditation-App.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-title">Meditation App</h3>
-              <p class="portfolio-text">App</p>
-            </li>
-          </ul>
-        </div>
-
-        <div class="row-second">
-          <ul>
-            <li class="taxi-service">
-              <img
-                class="portfolio-image"
-                src="./images/our-portfolio/Taxi-Service.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-title">Taxi Service</h3>
-              <p class="portfolio-text">Marketing</p>
-            </li>
-            <li class="screen-illustrations">
-              <img
-                class="portfolio-image"
-                src="./images/our-portfolio/Screen-Illustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-title">Screen Illustrations</h3>
-              <p class="portfolio-text">Design</p>
-            </li>
-            <li class="online-courses">
-              <img
-                class="portfolio-image"
-                src="./images/our-portfolio/Online-Courses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-title">Online Courses</h3>
-              <p class="portfolio-text">Marketing</p>
-            </li>
-          </ul>
-        </div>
-      </section>
-    </main>
-
-    <footer>
+<body>
+  <header>
+    <nav class="menu-navigation">
       <a href="./index.html" class="logo">Web<span>Studio</span></a>
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </footer>
-  </body>
+      <ul class="menu">
+        <li class="studio-link">
+          <a href="/">Studio</a>
+        </li>
+        <li class="portfolio-link">
+          <a href="/">Portfolio</a>
+        </li>
+        <li class="contacts-link">
+          <a href="/">Contacts</a>
+        </li>
+      </ul>
+    </nav>
+
+    <address class="contacts">
+      <ul>
+        <li class="email-link">
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="number-link">
+          <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        </li>
+      </ul>
+    </address>
+  </header>
+
+  <main>
+    <section class="hero-section">
+      <h1 class="hero-title">Effective Solutions <br> Your Business</h1>
+      <button type="button" class="button">Order Service</button>
+    </section>
+
+    <section class="feature-content">
+      <h2 class="feature-title">Features</h2>
+
+      <ul class="feature-list">
+        <li class="feature-strategy">
+          <h3 class="strategy-title">Strategy</h3>
+          <p class="strategy-text">
+            Our goal is to identify the business problem to walk away with the
+            perfect and creative solution.
+          </p>
+        </li>
+
+        <li class="feature-punctuality">
+          <h3 class="punctuality-title">Punctuality</h3>
+          <p class="punctuality-text">
+            Bring the key message to the brand's audience for the best price
+            within the shortest possible time.
+          </p>
+        </li>
+
+        <li class="feature-diligence">
+          <h3 class="diligence-title">Diligence</h3>
+          <p class="diligence-text">
+            Research and confirm brands that present the strongest digital
+            growth opportunities and minimize risk.
+          </p>
+        </li>
+
+        <li class="feature-technologies">
+          <h3 class="technologies-title">Technologies</h3>
+          <p class="technologies-text">
+            Design practice focused on digital experiences. We bring forth a
+            deep passion for problem-solving.
+          </p>
+        </li>
+      </ul>
+    </section>
+
+    <section class="content-our-team">
+      <h2 class="our-team-title">Our Team</h2>
+
+      <ul class="list-our-team">
+        <li class="card-mark">
+          <img class="card-mark-image" src="./images/Mark.jpg" alt="on the picture Mark Guerrero" width="264"
+            height="260" />
+
+          <h3 class="team-title">Mark Guerrero</h3>
+          <p class="team-text">Product Designer</p>
+        </li>
+
+        <li class="card-tom">
+          <img class="card-tom-image" src="./images/Tom.jpg" alt="on the picture Tom Ford" width="264" height="260" />
+          <h3 class="team-title">Tom Ford</h3>
+          <p class="team-text">Frontend Developer</p>
+        </li>
+
+        <li class="card-camila">
+          <img class="card-camila-image" src="./images/Camila.jpg" alt="on the picture Camila Garcia" width="264"
+            height="260" />
+          <h3 class="team-title">Camila Garcia</h3>
+          <p class="team-text">Marketing</p>
+        </li>
+
+        <li class="card-daniel">
+          <img class="card-daniel-image" src="./images/Daniel.jpg" alt="on the picture Daniel Wilson" width="264"
+            height="260" />
+          <h3 class="team-title">Daniel Wilson</h3>
+          <p class="team-text">UI Designer</p>
+        </li>
+      </ul>
+    </section>
+
+    <section class="portfolio-content">
+      <h2 class="portfolio-title">Our Portfolio</h2>
+
+      <div class="row-first">
+        <ul>
+          <li class="banking-app">
+            <img class="portfolio-image" src="./images/our-portfolio/Banking-App.jpg" alt="Banking App" width="360"
+              height="300" />
+            <h3 class="portfolio-title">Banking App</h3>
+            <p class="portfolio-text">App</p>
+          </li>
+          <li class="cashless-payment">
+            <img class="portfolio-image" src="./images/our-portfolio/Cashless-Payment.jpg" alt="Cashless Payment"
+              width="360" height="300" />
+            <h3 class="portfolio-title">Cashless Payment</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li class="meditation-app">
+            <img class="portfolio-image" src="./images/our-portfolio/Meditation-App.jpg" alt="Meditation App"
+              width="360" height="300" />
+            <h3 class="portfolio-title">Meditation App</h3>
+            <p class="portfolio-text">App</p>
+          </li>
+        </ul>
+      </div>
+
+      <div class="row-second">
+        <ul>
+          <li class="taxi-service">
+            <img class="portfolio-image" src="./images/our-portfolio/Taxi-Service.jpg" alt="Taxi Service" width="360"
+              height="300" />
+            <h3 class="portfolio-title">Taxi Service</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li class="screen-illustrations">
+            <img class="portfolio-image" src="./images/our-portfolio/Screen-Illustrations.jpg"
+              alt="Screen Illustrations" width="360" height="300" />
+            <h3 class="portfolio-title">Screen Illustrations</h3>
+            <p class="portfolio-text">Design</p>
+          </li>
+          <li class="online-courses">
+            <img class="portfolio-image" src="./images/our-portfolio/Online-Courses.jpg" alt="Online Courses"
+              width="360" height="300" />
+            <h3 class="portfolio-title">Online Courses</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <a href="./index.html" class="logo">Web<span id="second-part">Studio</span></a>
+    <p>
+      Increase the flow of customers and sales for your business with digital
+      marketing & growth solutions.
+    </p>
+  </footer>
+</body>
+
 </html>
