--- a/index.html
+++ b/index.html
@@ -16,29 +16,29 @@
 </head>
 
 <body>
-  <header>
+  <header class="content">
     <nav class="menu-navigation">
       <a href="./index.html" class="logo">Web<span>Studio</span></a>
-      <ul class="menu">
-        <li class="studio-link">
-          <a href="/">Studio</a>
+      <ul class="menu-list">
+        <li class="list-studio">
+          <a href="/" class="studio-link">Studio</a>
         </li>
-        <li class="portfolio-link">
-          <a href="/">Portfolio</a>
+        <li class="list-portfolio">
+          <a href="/" class="portfolio-link">Portfolio</a>
         </li>
-        <li class="contacts-link">
-          <a href="/">Contacts</a>
+        <li class="list-contacts">
+          <a href="/" class="contacts-link">Contacts</a>
         </li>
       </ul>
     </nav>
 
     <address class="contacts">
-      <ul>
-        <li class="email-link">
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <ul class="contacts-list">
+        <li class="list-email">
+          <a class="email-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
-        <li class="number-link">
-          <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <li class="number-list">
+          <a class="number-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
         </li>
       </ul>
     </address>
@@ -173,9 +173,9 @@
     </section>
   </main>
 
-  <footer>
-    <a href="./index.html" class="logo">Web<span id="second-part">Studio</span></a>
-    <p>
+  <footer class="footer-content">
+    <a href="./index.html" class="logo">Web<span class="second-part">Studio</span></a>
+    <p class="footer-text">
       Increase the flow of customers and sales for your business with digital
       marketing & growth solutions.
     </p>
