--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </section>
 
     <section class="portfolio-content">
-      <h2 class="portfolio-title">Our Portfolio</h2>
+      <h2 class="title-of-portfolio">Our Portfolio</h2>
 
       <div class="row-first">
         <ul>
