--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
 
   <main>
     <section class="hero-section">
-      <h1 class="hero-title">Effective Solutions <br> Your Business</h1>
+      <h1 class="hero-title">
+        Effective Solutions <br />
+        Your Business
+      </h1>
       <button type="button" class="button">Order Service</button>
     </section>
 
