--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <a href="./index.html" class="logo">Web<span>Studio</span></a>
       <ul class="menu-list">
         <li class="list-studio">
-          <a href="/" class="studio-link">Studio</a>
+          <a href="" class="studio-link">Studio</a>
         </li>
         <li class="list-portfolio">
-          <a href="/" class="portfolio-link">Portfolio</a>
+          <a href="" class="portfolio-link">Portfolio</a>
         </li>
         <li class="list-contacts">
-          <a href="/" class="contacts-link">Contacts</a>
+          <a href="" class="contacts-link">Contacts</a>
         </li>
       </ul>
     </nav>
