--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
     <nav class="menu-navigation">
       <a href="./index.html" class="logo">Web<span>Studio</span></a>
       <ul class="menu-list">
-        <li class="list-studio">
-          <a href="./index.html" class="studio-link">Studio</a>
+        <li>
+          <a href="" class="menu-link">Studio</a>
         </li>
-        <li class="list-portfolio">
-          <a href="./index.html" class="portfolio-link">Portfolio</a>
+        <li>
+          <a href="" class="menu-link">Portfolio</a>
         </li>
-        <li class="list-contacts">
-          <a href="./index.html" class="contacts-link">Contacts</a>
+        <li>
+          <a href="" class="menu-link">Contacts</a>
         </li>
       </ul>
     </nav>
 
     <address class="contacts">
       <ul class="contacts-list">
-        <li class="list-email">
-          <a class="email-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <li>
+          <a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
-        <li class="number-list">
-          <a class="number-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <li>
+          <a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
         </li>
       </ul>
     </address>
