--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a href="./index.html" class="logo">Web<span>Studio</span></a>
       <ul class="menu-list">
         <li>
-          <a href="" class="menu-link">Studio</a>
+          <a href="./index.html" class="menu-link">Studio</a>
         </li>
         <li>
           <a href="" class="menu-link">Portfolio</a>
