--- a/index.html
+++ b/index.html
@@ -53,37 +53,37 @@
       <button type="button" class="button">Order Service</button>
     </section>
 
-    <section class="feature-content">
-      <h2 class="feature-title">Features</h2>
+    <section class="features-content">
+      <h2 class="features-title">Features</h2>
 
       <ul class="feature-list">
-        <li class="feature-strategy">
-          <h3 class="strategy-title">Strategy</h3>
-          <p class="strategy-text">
+        <li>
+          <h3 class="feature-title">Strategy</h3>
+          <p class="feature-text">
             Our goal is to identify the business problem to walk away with the
             perfect and creative solution.
           </p>
         </li>
 
-        <li class="feature-punctuality">
-          <h3 class="punctuality-title">Punctuality</h3>
-          <p class="punctuality-text">
+        <li>
+          <h3 class="feature-title">Punctuality</h3>
+          <p class="feature-text">
             Bring the key message to the brand's audience for the best price
             within the shortest possible time.
           </p>
         </li>
 
-        <li class="feature-diligence">
-          <h3 class="diligence-title">Diligence</h3>
-          <p class="diligence-text">
+        <li>
+          <h3 class="feature-title">Diligence</h3>
+          <p class="feature-text">
             Research and confirm brands that present the strongest digital
             growth opportunities and minimize risk.
           </p>
         </li>
 
-        <li class="feature-technologies">
-          <h3 class="technologies-title">Technologies</h3>
-          <p class="technologies-text">
+        <li>
+          <h3 class="feature-title">Technologies</h3>
+          <p class="feature-text">
             Design practice focused on digital experiences. We bring forth a
             deep passion for problem-solving.
           </p>
