--- a/index.html
+++ b/index.html
@@ -95,28 +95,26 @@
       <h2 class="our-team-title">Our Team</h2>
 
       <ul class="list-our-team">
-        <li class="card-mark">
-          <img class="card-image" src="./images/Mark.jpg" alt="on the picture Mark Guerrero" width="264" height="260" />
+        <li>
+          <img src="./images/Mark.jpg" alt="on the picture Mark Guerrero" width="264" height="260" />
           <h3 class="team-title">Mark Guerrero</h3>
           <p class="team-text">Product Designer</p>
         </li>
 
-        <li class="card-tom">
-          <img class="card-image" src="./images/Tom.jpg" alt="on the picture Tom Ford" width="264" height="260" />
+        <li>
+          <img src="./images/Tom.jpg" alt="on the picture Tom Ford" width="264" height="260" />
           <h3 class="team-title">Tom Ford</h3>
           <p class="team-text">Frontend Developer</p>
         </li>
 
-        <li class="card-camila">
-          <img class="card-image" src="./images/Camila.jpg" alt="on the picture Camila Garcia" width="264"
-            height="260" />
+        <li>
+          <img src="./images/Camila.jpg" alt="on the picture Camila Garcia" width="264" height="260" />
           <h3 class="team-title">Camila Garcia</h3>
           <p class="team-text">Marketing</p>
         </li>
 
-        <li class="card-daniel">
-          <img class="card-image" src="./images/Daniel.jpg" alt="on the picture Daniel Wilson" width="264"
-            height="260" />
+        <li>
+          <img src="./images/Daniel.jpg" alt="on the picture Daniel Wilson" width="264" height="260" />
           <h3 class="team-title">Daniel Wilson</h3>
           <p class="team-text">UI Designer</p>
         </li>
