--- a/index.html
+++ b/index.html
@@ -95,25 +95,25 @@
       <h2 class="our-team-title">Our Team</h2>
 
       <ul class="list-our-team">
-        <li>
+        <li class="team-card">
           <img src="./images/Mark.jpg" alt="on the picture Mark Guerrero" width="264" height="260" />
           <h3 class="team-title">Mark Guerrero</h3>
           <p class="team-text">Product Designer</p>
         </li>
 
-        <li>
+        <li class="team-card">
           <img src="./images/Tom.jpg" alt="on the picture Tom Ford" width="264" height="260" />
           <h3 class="team-title">Tom Ford</h3>
           <p class="team-text">Frontend Developer</p>
         </li>
 
-        <li>
+        <li class="team-card">
           <img src="./images/Camila.jpg" alt="on the picture Camila Garcia" width="264" height="260" />
           <h3 class="team-title">Camila Garcia</h3>
           <p class="team-text">Marketing</p>
         </li>
 
-        <li>
+        <li class="team-card">
           <img src="./images/Daniel.jpg" alt="on the picture Daniel Wilson" width="264" height="260" />
           <h3 class="team-title">Daniel Wilson</h3>
           <p class="team-text">UI Designer</p>
@@ -124,46 +124,46 @@
     <section class="portfolio-content">
       <h2 class="title-of-portfolio">Our Portfolio</h2>
 
-      <div class="row-first">
-        <ul>
-          <li class="banking-app">
-            <img class="portfolio-image" src="./images/our-portfolio/Banking-App.jpg" alt="Banking App" width="360"
-              height="300" />
+      <div class="row-content">
+        <ul class="portfolio-list">
+          <li>
+            <img src="./images/our-portfolio/Banking-App.jpg" alt="On the picture showing app for bak" width="360"
+              height="300">
             <h3 class="portfolio-title">Banking App</h3>
             <p class="portfolio-text">App</p>
           </li>
-          <li class="cashless-payment">
-            <img class="portfolio-image" src="./images/our-portfolio/Cashless-Payment.jpg" alt="Cashless Payment"
-              width="360" height="300" />
+          <li>
+            <img src="./images/our-portfolio/Cashless-Payment.jpg" alt="On the picture showing Cashless-Payment"
+              width="360" height="300">
             <h3 class="portfolio-title">Cashless Payment</h3>
             <p class="portfolio-text">Marketing</p>
           </li>
-          <li class="meditation-app">
-            <img class="portfolio-image" src="./images/our-portfolio/Meditation-App.jpg" alt="Meditation App"
-              width="360" height="300" />
+          <li>
+            <img src="./images/our-portfolio/Meditation-App.jpg" alt="On the picture showing Meditation-App" width="360"
+              height="300">
             <h3 class="portfolio-title">Meditation App</h3>
             <p class="portfolio-text">App</p>
           </li>
         </ul>
       </div>
 
-      <div class="row-second">
+      <div class="row-content">
         <ul>
-          <li class="taxi-service">
-            <img class="portfolio-image" src="./images/our-portfolio/Taxi-Service.jpg" alt="Taxi Service" width="360"
-              height="300" />
+          <li>
+            <img src="./images/our-portfolio/Taxi-Service.jpg" alt="On the picture showing Taxi Service" width="360"
+              height="300">
             <h3 class="portfolio-title">Taxi Service</h3>
             <p class="portfolio-text">Marketing</p>
           </li>
-          <li class="screen-illustrations">
-            <img class="portfolio-image" src="./images/our-portfolio/Screen-Illustrations.jpg"
-              alt="Screen Illustrations" width="360" height="300" />
+          <li>
+            <img src="./images/our-portfolio/Screen-Illustrations.jpg" alt="On the picture showing Screen-Illustrations"
+              width="360" height="300">
             <h3 class="portfolio-title">Screen Illustrations</h3>
             <p class="portfolio-text">Design</p>
           </li>
-          <li class="online-courses">
-            <img class="portfolio-image" src="./images/our-portfolio/Online-Courses.jpg" alt="Online Courses"
-              width="360" height="300" />
+          <li>
+            <img src="./images/our-portfolio/Online-Courses.jpg" alt="On the picture showing the woman" width="360"
+              height="300">
             <h3 class="portfolio-title">Online Courses</h3>
             <p class="portfolio-text">Marketing</p>
           </li>
