--- a/index.html
+++ b/index.html
@@ -124,51 +124,44 @@
     <section class="portfolio-content">
       <h2 class="title-of-portfolio">Our Portfolio</h2>
 
-      <div class="row-content">
-        <ul class="portfolio-list">
-          <li>
-            <img src="./images/our-portfolio/Banking-App.jpg" alt="On the picture showing app for bak" width="360"
-              height="300">
-            <h3 class="portfolio-title">Banking App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li>
-            <img src="./images/our-portfolio/Cashless-Payment.jpg" alt="On the picture showing Cashless-Payment"
-              width="360" height="300">
-            <h3 class="portfolio-title">Cashless Payment</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/our-portfolio/Meditation-App.jpg" alt="On the picture showing Meditation-App" width="360"
-              height="300">
-            <h3 class="portfolio-title">Meditation App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-        </ul>
-      </div>
-
-      <div class="row-content">
-        <ul>
-          <li>
-            <img src="./images/our-portfolio/Taxi-Service.jpg" alt="On the picture showing Taxi Service" width="360"
-              height="300">
-            <h3 class="portfolio-title">Taxi Service</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/our-portfolio/Screen-Illustrations.jpg" alt="On the picture showing Screen-Illustrations"
-              width="360" height="300">
-            <h3 class="portfolio-title">Screen Illustrations</h3>
-            <p class="portfolio-text">Design</p>
-          </li>
-          <li>
-            <img src="./images/our-portfolio/Online-Courses.jpg" alt="On the picture showing the woman" width="360"
-              height="300">
-            <h3 class="portfolio-title">Online Courses</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-        </ul>
-      </div>
+      <ul class="portfolio-list">
+        <li>
+          <img src="./images/our-portfolio/Banking-App.jpg" alt="On the picture showing app for bak" width="360"
+            height="300" />
+          <h3 class="portfolio-title">Banking App</h3>
+          <p class="portfolio-text">App</p>
+        </li>
+        <li>
+          <img src="./images/our-portfolio/Cashless-Payment.jpg" alt="On the picture showing Cashless-Payment"
+            width="360" height="300" />
+          <h3 class="portfolio-title">Cashless Payment</h3>
+          <p class="portfolio-text">Marketing</p>
+        </li>
+        <li>
+          <img src="./images/our-portfolio/Meditation-App.jpg" alt="On the picture showing Meditation-App" width="360"
+            height="300" />
+          <h3 class="portfolio-title">Meditation App</h3>
+          <p class="portfolio-text">App</p>
+        </li>
+        <li>
+          <img src="./images/our-portfolio/Taxi-Service.jpg" alt="On the picture showing Taxi Service" width="360"
+            height="300" />
+          <h3 class="portfolio-title">Taxi Service</h3>
+          <p class="portfolio-text">Marketing</p>
+        </li>
+        <li>
+          <img src="./images/our-portfolio/Screen-Illustrations.jpg" alt="On the picture showing Screen-Illustrations"
+            width="360" height="300" />
+          <h3 class="portfolio-title">Screen Illustrations</h3>
+          <p class="portfolio-text">Design</p>
+        </li>
+        <li>
+          <img src="./images/our-portfolio/Online-Courses.jpg" alt="On the picture showing the woman" width="360"
+            height="300" />
+          <h3 class="portfolio-title">Online Courses</h3>
+          <p class="portfolio-text">Marketing</p>
+        </li>
+      </ul>
     </section>
   </main>
 
