--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
       <ul class="portfolio-list">
         <li>
-          <img src="./images/our-portfolio/Banking-App.jpg" alt="On the picture showing app for bak" width="360"
+          <img src="./images/our-portfolio/Banking-App.jpg" alt="On the picture showing app for Banking-App" width="360"
             height="300" />
           <h3 class="portfolio-title">Banking App</h3>
           <p class="portfolio-text">App</p>
@@ -156,7 +156,7 @@
           <p class="portfolio-text">Design</p>
         </li>
         <li>
-          <img src="./images/our-portfolio/Online-Courses.jpg" alt="On the picture showing the woman" width="360"
+          <img src="./images/our-portfolio/Online-Courses.jpg" alt="Woman looking at online courses" width="360"
             height="300" />
           <h3 class="portfolio-title">Online Courses</h3>
           <p class="portfolio-text">Marketing</p>
